fix alignment of buttonset in header

--- a/src/components/header/_header-new.scss
+++ b/src/components/header/_header-new.scss
@@ -26,6 +26,16 @@
             }
           }
         }
+
+        .btn.searchfield-category-button {
+          height: 38px;
+          padding-right: 20px;
+
+          @media (min-width: $breakpoint-phone-to-tablet) {
+            height: 34px;
+            padding-right: 10px;
+          }
+        }
       }
 
       .toolbar-searchfield-wrapper {
